--- a/css/styles.css
+++ b/css/styles.css
@@ -6,10 +6,12 @@
     --secondary-black-color: #2F303A;
     --super-blue-color :#188CE8;
     --fon-button-color : #F5F4FA;
+
     --main-font: 'Roboto',sans-serif;
     --secondary-font : 'Raleway',sans-serif;
 }
 /*body*/
+
 body {
     font-size: 14px;
     background-color:var(--primary-white-color);
@@ -17,7 +19,9 @@ body {
     font-family: 'Roboto',sans-serif;
     letter-spacing: 0.03em
 }
+
 /*Утиліт*/
+
 .list {
     list-style: none;
     padding: 0;
@@ -30,11 +34,13 @@ body {
     padding-left: 20px;
     padding-right: 20px;
 }
-
 .page-header {
-
+    width: 1600px;
+    border: 1px solid rgba(236, 236, 236, 1) ;
 }
+
 /*Main-nav*/
+
 .main-nav {
     display: flex;
     align-items: center;
@@ -47,10 +53,13 @@ body {
     margin-left: auto;
     margin-right: auto;
 }
+
  /*WebStudio*/
+
 .logo-link {
     color:var(--accent-color);
     font-family: var(--secondary-font);
+
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
@@ -64,6 +73,7 @@ body {
 .site-nav .link,
 .site-nav .list {
     color: var(--title-text-color);
+
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
@@ -85,7 +95,7 @@ body {
     margin-right: 50px;
 }
 .site-nav .item:not(:last-child) {
-    margin-right: 40px;
+    margin-right: 50px;
 }
 .site-nav .link {
     display: block;
@@ -95,11 +105,16 @@ body {
 /*Contact nav*/
 .contact-nav .link {
     color: var(--primary-text-color);
+
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
     text-decoration: none;
+
+    display: block;
+    padding-top:  32px;
+    padding-bottom: 32px;
 }
 .contact-nav .link:hover, 
 .contact-nav .link:focus {
@@ -121,7 +136,7 @@ body {
     margin-right: 50px;
 }
 .contact-nav .item:not(:last-child) {
-    margin-right: 40px;
+    margin-right: 50px;
 }
 
 /*Hero*/
@@ -132,12 +147,12 @@ body {
     margin-top: 0;
     margin: 0px;
     padding-bottom: 200px;
+    padding-top: 200px;
 }
 h1,h2,h3 { margin: 0px;
 }
 .hero-title {
-    padding-top: 200px;
-    padding-bottom: 30px;
+    margin-bottom: 30px;
 
     color:var(--primary-white-color) ;
     
@@ -150,19 +165,24 @@ h1,h2,h3 { margin: 0px;
 /*features*/
 .features-list .title {
     color: var(--title-text-color);
+
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
     text-transform: uppercase;
+    
     margin-top: 0;
     margin-bottom: 10px;
 }
 .features-list .text {
-    margin-top: 0px;
     color: var(--primary-text-color);
+    
     font-weight: 400;
     font-size: 14px;
     line-height: 1.7;
+
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 .features-list {
     display: flex;
@@ -172,22 +192,28 @@ h1,h2,h3 { margin: 0px;
 }
 .features-list .item {
     width: 270px;
-    margin-top: 94px;
     margin-left: 30px;
-    margin-bottom: 118px;
+}
+.features-list.title:not(:first-child) {
+    margin-left: 30px;
 }
 /*Our work*/
+.rutin {
+    padding-bottom: 94px;
+}
 .work-list {
     color: var(--title-text-color);
+    
     font-weight: 700;
     font-size: 36px;
     line-height: 1.17;
     text-align: center;
+    
     margin-top: 0px;
-    margin-bottom: 50px;
 }
 .work-list .title {
     color: var(--title-text-color);
+
     font-weight: 500;
     font-size: 16px;
     line-height: 1.19;
@@ -196,11 +222,11 @@ h1,h2,h3 { margin: 0px;
 .our-list {
     display: flex;
     text-align: center;
+    margin: 0px;
 }
 .our-list .item {
-    margin-top: 50px;
+    display: block;
     margin-left: 30px;
-    margin-bottom: 94px;
     list-style: none;
 }
 .our-list .item {
@@ -210,11 +236,17 @@ h1,h2,h3 { margin: 0px;
     margin-right: 30px; 
 }
 
+/*Team*/
+
 .fone {
     background-color: var(--fon-button-color);
+    padding-top: 94px;
+    padding-bottom: 94px;
 }
 .team-list {
     display: flex;
+    margin: 0px;
+
     list-style: none;
 }
 
@@ -226,17 +258,21 @@ h1,h2,h3 { margin: 0px;
     text-align: center;
     margin-top: 0px;
     margin-bottom: 50px;
-    padding-top: 94px;
 }
 .work-platform {
     background: var(--primary-white-color) ;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
+
     width: 270px;
     height: 368px;
     text-align: center;
+}
+.work-platform {
     margin-right: 30px;
-    margin-bottom: 94px;
+}
+.work-platform:not(:last-child) {
+    margin-right: 30px;
 }
 .work-platform .title {
     margin-top: 0px;
@@ -248,22 +284,23 @@ h1,h2,h3 { margin: 0px;
 }
 .work-list .text{
     color: var(--primary-text-color);
+
     font-weight: 400;
     font-size: 16px;
     line-height: 19px;
     text-align: center;
 }
-
 .team-list .title {
     margin-bottom: 10px;
-    padding-top: 30px;
 }
 
 /*Button*/
+
 .button {
     font-family: inherit;
 }
 .button-primary {
+
     min-width: 216px;
     display:inline-block;
     padding: 10px 32px;
@@ -277,7 +314,6 @@ h1,h2,h3 { margin: 0px;
     font-weight: 700;
     line-height: 1.88;
     text-align: center;
-    
 }
 .button-primary:hover, 
 .button-primary:focus {
@@ -297,6 +333,7 @@ h1,h2,h3 { margin: 0px;
 }
 .contact-foot .link {
     color: var(--primary-text-color);
+
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
@@ -312,6 +349,7 @@ h1,h2,h3 { margin: 0px;
 }
 .map-link {
     color: var(--primary-white-color);
+
     font-weight: 400;
     font-size: 14px;
     line-height: 1.7;
@@ -351,15 +389,21 @@ h1,h2,h3 { margin: 0px;
 }
 .site-works .list {
     display: flex;
-    padding-left: 297px;
+    margin-bottom: 50px;
+    padding-top: 94px;
 }
 .site-works .list {
 
 }
 .site-works .item {
     margin-right: 8px;
-    padding-bottom: 50px;
-    padding-top: 100px;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    padding-left: 22px;
+    padding-right: 22px;
+}
+.site.work .item:not(:last-child) {
+    margin-right: 8px;
 }
 .project-list {
     display: flex;
@@ -368,7 +412,8 @@ h1,h2,h3 { margin: 0px;
     margin-left: 0px;
     padding: 0px;
     margin-top: 0px;
-    margin-bottom: 114px;
+    margin-bottom: -30px;
+    margin-right: -30px;
 }
 .project-list .item {
     margin-right: 30px;
@@ -378,10 +423,10 @@ h1,h2,h3 { margin: 0px;
     border-radius: 0px 0px 4px 4px;
 }
 .project-list .item:nth-child(3n) {
-    margin-right: 0;
+
 }
 .project-list .item:nth-last-child(-n +3 ) {
-    margin-bottom: 0;
+
 }
 .works-title {
     text-align: left;
@@ -398,6 +443,8 @@ h1,h2,h3 { margin: 0px;
 /*Special*/
 .special {
     margin-top: 0;
+    padding-top: 94px;
+    padding-bottom: 94px;
   }
 .visually-hidden {
     position: absolute;
@@ -411,18 +458,32 @@ h1,h2,h3 { margin: 0px;
       clip-path: inset(50%);
       margin: -1px;
   }
-  .logo-link {
+  .logof-link {
+    color:var(--accent-color);
+    font-family: var(--secondary-font);
 
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    text-decoration: none;
+    
+    padding-top: 25px;
+  }
+  .logof-link {
+    margin: 0px;
+    padding-bottom: 20px;
   }
   .keys {
     font-style: normal;
-    padding-top: 20px;
-    padding-bottom: 60px;
+    margin-top: 20px;
   }
   .contact-list {
-    margin-left: 5px;
     padding-top: 60px;
+    padding-bottom: 60px;
   }
   .contact-foot .item {
+    margin-bottom: 0px;
+  }
+  .contact-foot .item:not(:last-child) {
     margin-bottom: 9px;
   }
