--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ body {
     background-color:var(--primary-white-color);
     color: var(--primary-text);
     font-family: 'Roboto',sans-serif;
-    letter-spacing: 0.03em
+    letter-spacing: 0.03em;
 }
 
 /*Утиліт*/
@@ -36,14 +36,16 @@ body {
     padding-right: 20px;
 }
 .page-header {
-    width: 1600px;
+    width: 1200px;
     border: 1px solid rgba(236, 236, 236, 1) ;
+    margin: auto;
 }
 
 /*Main-nav*/
 
 .main-nav {
     display: flex;
+    width: 1200;
     align-items: center;
     border: rgba(236, 236, 236, 1);
 }
@@ -103,7 +105,9 @@ body {
     padding-top:  32px;
     padding-bottom: 32px;
 }
+
 /*Contact nav*/
+
 .contact-nav .link {
     color: var(--primary-text-color);
 
@@ -163,7 +167,9 @@ h1,h2,h3 { margin: 0px;
     letter-spacing: 0.06em;
     text-transform: uppercase;
 }
+
 /*features*/
+
 .features-list .title {
     color: var(--title-text-color);
 
@@ -198,7 +204,9 @@ h1,h2,h3 { margin: 0px;
 .features-list.title:not(:first-child) {
     margin-left: 30px;
 }
+
 /*Our work*/
+
 .rutin {
     padding-bottom: 94px;
 }
@@ -211,6 +219,7 @@ h1,h2,h3 { margin: 0px;
     text-align: center;
     
     margin-top: 0px;
+    margin-bottom: 50px;
 }
 .work-list .title {
     color: var(--title-text-color);
@@ -224,17 +233,21 @@ h1,h2,h3 { margin: 0px;
     display: flex;
     text-align: center;
     margin: 0px;
+    padding: 0px;
 }
 .our-list .item {
     display: block;
-    margin-left: 30px;
     list-style: none;
 }
+
 .our-list .item {
     margin-right: 30px;
 }
 .our-list .item:not(:last-child) {
     margin-right: 30px; 
+}
+.blocks {
+    display: block;
 }
 
 /*Team*/
@@ -247,7 +260,7 @@ h1,h2,h3 { margin: 0px;
 .team-list {
     display: flex;
     margin: 0px;
-
+    padding: 0px;
     list-style: none;
 }
 
@@ -300,11 +313,30 @@ h1,h2,h3 { margin: 0px;
 .button {
     font-family: inherit;
 }
-.button-primary {
+.button .links:hover, 
+.button .links:focus {
+    background-color : var(--super-blue-color);
+    color: var(--primary-white-color);
+    cursor:pointer;
+}
 
+.site-works .links {
+    background-color: var(--fon-button-color);
+    color: var(--title-text-color);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.6;
+    text-align: center;
+    border:none;
+}
+.links {
+    padding : 6px 25px;
+}
+.button-primary {
     min-width: 216px;
     display:inline-block;
     padding: 10px 32px;
+   
     background-color: var(--accent-color);
     color: var(--primary-white-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -322,7 +354,7 @@ h1,h2,h3 { margin: 0px;
     color: var(--primary-white-color);
     cursor:pointer;
 }
-.link {
+.link,.links {
     cursor:pointer;
 }
 .contact-list {
@@ -356,14 +388,23 @@ h1,h2,h3 { margin: 0px;
     line-height: 1.7;
     text-decoration: none;
 }
+
+/*portmain*/
+
+.port {
+    padding-bottom: 94px;
+
+}
 .works-title {
     color: var(--title-text-color);
+
     font-weight: 700;   
     font-size: 18px;
     line-height: 2.0;
     letter-spacing: 0.06em;
     margin-top: 0px;
     text-align: center;
+    margin-bottom: 4px;
 }
 .works-text {
     color: var(--primary-text-color);
@@ -388,20 +429,20 @@ h1,h2,h3 { margin: 0px;
     background-color: var(--accent-color);
     color: var(--primary-white-color);
 }
+.site-works .links:hover, 
+.site-works .links:focus {
+    background-color: var(--accent-color);
+    color: var(--primary-white-color);
+}
 .site-works .list {
     display: flex;
     margin-bottom: 50px;
     padding-top: 94px;
-}
-.site-works .list {
-
+    align-items: center;
+    margin-left: 300px;
 }
 .site-works .item {
     margin-right: 8px;
-    padding-top: 6px;
-    padding-bottom: 6px;
-    padding-left: 22px;
-    padding-right: 22px;
 }
 .site.work .item:not(:last-child) {
     margin-right: 8px;
@@ -422,6 +463,15 @@ h1,h2,h3 { margin: 0px;
     width: 370px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
+    padding: 0px;
+}
+.hor {
+    text-decoration: none;
+}
+.card-content {
+    padding-left: 24px;
+    padding-bottom: 20px;
+    padding-top: 20px;
 }
 .project-list .item:nth-child(3n) {
 
@@ -431,14 +481,10 @@ h1,h2,h3 { margin: 0px;
 }
 .works-title {
     text-align: left;
-    margin-left: 24px;
-    margin-top: 20px;
-    margin-bottom: 4px;
 }
 .works-text {
     text-align: left;
-    margin-left: 24px;
-    margin-bottom: 50px;
+    margin: 0px;
 }
 
 /*Special*/
