--- a/css/styles.css
+++ b/css/styles.css
@@ -36,11 +36,12 @@ body {
     padding-right: 20px;
 }
 .page-header {
-    width: 1200px;
-    border: 1px solid rgba(236, 236, 236, 1) ;
-    margin: auto;
+    border-bottom: 1px solid rgba(236, 236, 236, 1) ;
+ 
 }
-
+.page-header>.container{
+       display: flex;
+} 
 /*Main-nav*/
 
 .main-nav {
@@ -95,7 +96,7 @@ body {
     margin-left: 93px;
 }
 .site-nav .item {
-    margin-right: 50px;
+    margin-right: 0px;
 }
 .site-nav .item:not(:last-child) {
     margin-right: 50px;
@@ -138,7 +139,7 @@ body {
     margin-left: auto;
 }
 .contact-nav .item {
-    margin-right: 50px;
+    margin-right: 0px;
 }
 .contact-nav .item:not(:last-child) {
     margin-right: 50px;
@@ -199,9 +200,9 @@ h1,h2,h3 { margin: 0px;
 }
 .features-list .item {
     width: 270px;
-    margin-left: 30px;
+    margin-left: 0px;
 }
-.features-list.title:not(:first-child) {
+.features-list .item:not(:first-child) {
     margin-left: 30px;
 }
 
@@ -239,9 +240,8 @@ h1,h2,h3 { margin: 0px;
     display: block;
     list-style: none;
 }
-
 .our-list .item {
-    margin-right: 30px;
+    margin-right: 0px;
 }
 .our-list .item:not(:last-child) {
     margin-right: 30px; 
@@ -283,18 +283,16 @@ h1,h2,h3 { margin: 0px;
     text-align: center;
 }
 .work-platform {
-    margin-right: 30px;
+    margin-right: 0px;
 }
 .work-platform:not(:last-child) {
     margin-right: 30px;
 }
 .work-platform .title {
     margin-top: 0px;
-    margin-bottom: 10px;
 }
 .work-platform .text {
     margin-top: 0px;
-    margin-bottom: 30px;
 }
 .work-list .text{
     color: var(--primary-text-color);
@@ -307,12 +305,23 @@ h1,h2,h3 { margin: 0px;
 .team-list .title {
     margin-bottom: 10px;
 }
+.portal {
+    padding-top: 30px;
+}
+.portal .text {
+    margin: 0px;
+}
 
 /*Button*/
 
 .button {
     font-family: inherit;
 }
+.site-works .links {
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+}
+
 .button .links:hover, 
 .button .links:focus {
     background-color : var(--super-blue-color);
@@ -373,6 +382,7 @@ h1,h2,h3 { margin: 0px;
     letter-spacing: 0.02em;
     text-decoration: none;
 }
+
 .logo-link {
     margin: 0px;
     padding-bottom: 20px;
@@ -393,6 +403,7 @@ h1,h2,h3 { margin: 0px;
 
 .port {
     padding-bottom: 94px;
+    padding-top: 94px;
 
 }
 .works-title {
@@ -436,16 +447,15 @@ h1,h2,h3 { margin: 0px;
 }
 .site-works .list {
     display: flex;
+    justify-content: center; 
     margin-bottom: 50px;
-    padding-top: 94px;
     align-items: center;
-    margin-left: 300px;
 }
 .site-works .item {
-    margin-right: 8px;
+    margin-right: 0px;
 }
-.site.work .item:not(:last-child) {
-    margin-right: 8px;
+.site-works .item.item:not(:last-child) {
+    margin-right: 30px;
 }
 .project-list {
     display: flex;
@@ -458,25 +468,17 @@ h1,h2,h3 { margin: 0px;
     margin-right: -30px;
 }
 .project-list .item {
-    margin-right: 30px;
     margin-bottom: 30px;
+    margin-right: 30px;
     width: 370px;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
     padding: 0px;
 }
-.hor {
+    .hor {
     text-decoration: none;
 }
 .card-content {
-    padding-left: 24px;
-    padding-bottom: 20px;
-    padding-top: 20px;
-}
-.project-list .item:nth-child(3n) {
-
-}
-.project-list .item:nth-last-child(-n +3 ) {
+    padding: 20px 24px;
+    border: 1px solid rgba(238, 238, 238, 1)
 
 }
 .works-title {
@@ -513,8 +515,6 @@ h1,h2,h3 { margin: 0px;
     font-size: 26px;
     line-height: 1.19;
     text-decoration: none;
-    
-    padding-top: 25px;
   }
   .logof-link {
     margin: 0px;
