--- a/css/styles.css
+++ b/css/styles.css
@@ -318,8 +318,10 @@ h1,h2,h3 { margin: 0px;
     font-family: inherit;
 }
 .site-works .links {
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
+}
+.site-works .links {
+    border-radius: 4px ;
 }
 
 .button .links:hover, 
